--- a/server/pom.xml
+++ b/server/pom.xml
@@ -32,6 +32,18 @@
             <version>1.1.5.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.netflix.feign</groupId>
+            <artifactId>feign-gson</artifactId>
+            <version>8.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
